--- a/wp-content/themes/nationswell/scss/partials/desktop/_homepage.scss
+++ b/wp-content/themes/nationswell/scss/partials/desktop/_homepage.scss
@@ -96,10 +96,15 @@
   }
 
   .story-teases {
-    margin-bottom: 2.8rem;
+//    margin-bottom: 2.8rem;
 
     .story__hed {
       margin-bottom: 1.2rem;
     }
   }
+}
+
+.home .carousel {
+  margin-top: 2.8rem;
+  margin-bottom: 5rem;
 }
